--- a/pizza.html
+++ b/pizza.html
@@ -14,6 +14,6 @@
 				<input type="submit" value="Envia"/><input type="reset" value="Neteja"/>
 			</font>
 		</form>
-		Nom de l'administrador/desenvolupador: ianbefe<br>
+		Nom de l'administrador/desenvolupador: ianberfe<br>
 	</body>
 </html>
